unpackaged/main/default/objects/giact_integration__c/giact_integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>giact integration</label>
</CustomObject>