unpackaged/main/default/objects/giact_integration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This check if the custom setting is currently active or not. This will be helpful in turning on/off the Integration.</description>
    <inlineHelpText>This is helpful in turning on/off the integration.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>