unpackaged/main/default/objects/giact_integration__c/fields/giact_password__c.field-meta.xml
<CustomField>
    <fullName>giact_password__c</fullName>
    <label>giact password</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>