unpackaged/main/default/objects/giact_integration__c/fields/giact_url_domain__c.field-meta.xml
<CustomField>
    <fullName>giact_url_domain__c</fullName>
    <label>giact url domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>