unpackaged/main/default/objects/giact_integration__c/fields/giact_username__c.field-meta.xml
<CustomField>
    <fullName>giact_username__c</fullName>
    <label>giact username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>